<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.architgoyal.peacocksolar.InstallationAddressFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="40dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Upload Rooftop Image"
                    android:textColor="#FFFFFF"
                    android:id="@+id/btn_rooftop_image"
                    android:gravity="center"
                    android:background="@drawable/ripple_effect"
                    android:elevation="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="Or"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:gravity="center"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_rooftop_dimensions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_rooftop_dimensions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="number"
                        android:hint="@string/hint_rooftop_dimensions" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="Previous Electricity Bills"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingRight="10dp"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_bill1"
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/input_bill1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_bill1"
                                android:inputType="number" />
                        </android.support.design.widget.TextInputLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            android:text="Or"
                            android:textColor="#000000"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btn_bill1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:background="@drawable/ripple_effect"
                            android:elevation="20dp"
                            android:text="Upload Bill1"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_bill2"
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/input_bill2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_bill2"
                                android:inputType="number" />
                        </android.support.design.widget.TextInputLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            android:text="Or"
                            android:textColor="#000000"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btn_bill2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:background="@drawable/ripple_effect"
                            android:elevation="20dp"
                            android:text="Upload Bill2"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:elevation="20dp"
                android:text="@string/btn_back"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:elevation="20dp"
                android:text="@string/btn_sign_up"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>